<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OnBoarding">

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_your_budget"
        android:textSize="25sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="@+id/welcome_message"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/setup"
        app:layout_constraintTop_toBottomOf="@+id/setup"
        android:layout_marginTop="60dp"
        app:helperTextEnabled="true"
        app:errorEnabled="true"
        android:inputType="textPersonName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/enter_your_name"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/income_layout"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/name_layout"
        app:layout_constraintTop_toBottomOf="@+id/name_layout"
        android:layout_marginTop="40dp"
        app:helperTextEnabled="true"
        app:errorEnabled="true"
        android:inputType="numberDecimal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/income_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/monthly_income"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/budget_layout"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/income_layout"
        app:layout_constraintTop_toBottomOf="@+id/income_layout"
        android:layout_marginTop="40dp"
        android:inputType="numberDecimal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/budget_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/monthly_expense"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/cont_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/cont"
        android:textSize="25sp"
        android:padding="10dp"
        android:backgroundTint="#00BCD4"/>




</androidx.constraintlayout.widget.ConstraintLayout>