<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddTransactionFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/transaction_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@android:color/transparent"
        android:inputType="text"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/transaction_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/transaction_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/transaction_amount_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@android:color/transparent"
        android:inputType="numberDecimal"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/transaction_name_layout"
        app:layout_constraintTop_toBottomOf="@id/transaction_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/transaction_amount_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/transaction_date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@android:color/transparent"
        android:inputType="date"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="outline"
        app:endIconDrawable="@drawable/ic_baseline_calendar_today_24"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/transaction_amount_layout"
        app:layout_constraintTop_toBottomOf="@id/transaction_amount_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/transaction_date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_date" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/recurring_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/recurring_transaction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_date_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:visibility="invisible"
        android:id="@+id/from_date_layout"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@android:color/transparent"
        android:inputType="date"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="outline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recurring_checkbox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/from_date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/from_date" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:visibility="invisible"
        android:id="@+id/to_date_layout"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@android:color/transparent"
        android:inputType="date"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recurring_checkbox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/to_date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/to_date" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/transaction_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:contentDescription="choose type"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/from_date_layout" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/expense_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/expense"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        android:backgroundTint="@color/red"/>

    <Button
        android:id="@+id/income_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/income"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/green"/>



</androidx.constraintlayout.widget.ConstraintLayout>