<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.MonthWiseFragment">


    <LinearLayout
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/blue1"
        android:id="@+id/monthTopLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/net_balance"
            android:textSize="20sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nb"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/monthlyNb"/>

       <ProgressBar
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           style="?android:attr/progressBarStyleHorizontal"
           android:progress="50"
           android:progressDrawable="@drawable/custom_progress_bg"
           android:id="@+id/monthlyProgress"
           />


        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount_saved"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nb"
                    android:textColor="@color/green"
                    android:textSize="20sp"
                    android:id="@+id/monthly_save"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="90dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount_spent"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nb"
                    android:textColor="@color/red"
                    android:textSize="20sp"
                    android:id="@+id/monthly_spent"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/monthTopLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/transactions_this_month"
        android:textAllCaps="true"
        android:id="@+id/transac_monthly"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/list_item"
        app:layout_constraintTop_toBottomOf="@+id/transac_monthly"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constrainedHeight="true"
        android:id="@+id/monthRv"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:fabSize="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_baseline_add_circle_24"
        android:contentDescription="@string/add"
        android:layout_margin="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>