<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeScreenFragment">

    <include
     layout="@layout/custom_prog_bar"
        android:id="@+id/balance_chart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"
        app:layout_constraintTop_toBottomOf="@id/balance_chart"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/line_sep"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_sep"
        android:id="@+id/ut"
        android:layout_marginStart="16dp"
        android:text="@string/upcoming_transactions"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/all_transactions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/add_transaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ut"
        tools:listitem="@layout/list_item" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_baseline_add_circle_24"
        app:fabSize="normal"
        android:layout_margin="12dp"
        android:contentDescription="@string/add"
        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/set_reminder"
        app:icon="@drawable/ic_baseline_add_alert_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="12dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>